# math-dsl

./: CHANGELOG.md  LICENSE  README.md  math-dsl.cabal  stack.yaml
src/: Differentiate.hs  Eval.hs  Factor.hs  Main.hs  Parser.hs  Printer.hs  Simplify.hs
test/: Spec.hs
