cabal-version:       2.2

name:                math-dsl
version:             0.8.2
-- synopsis: A symbolic math DSL simplifying, factoring and evaluating arithmetic expressions
homepage:            https://github.com/githubuser/math-dsl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              tsir-beep
copyright:           2025 tsir-beep
category:            Math
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules: 
    Parser,
    Printer,
    Simplify,
    Factor,
    Eval
  hs-source-dirs: src
  build-depends:
    base >= 4.7 && < 5,
    split,
    mtl,
    containers
  default-language: Haskell2010

executable math-dsl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5,
    split,
    mtl,
    containers,
  other-modules: 
    Parser,
    Printer,
    Simplify,
    Factor,
    Eval
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite math-dsl-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-language: Haskell2010
  build-depends:       
    base >= 4.7 && < 5,
    hspec,
    math-dsl